--- a/3-multi-container.yaml
+++ b/3-multi-container.yaml
@@ -3,7 +3,7 @@ kind: Pod
 metadata:
   name: multi-container
   labels:
-  - project: roboshop
+    project: roboshop
     purpose: multi-container-demo
 spec:
   containers:
