--- a/11-pod-secret.yaml
+++ b/11-pod-secret.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: env-configmap
+  name: env-secret
 spec:
   containers:
   - name: nginx
     image: nginx
     envFrom:
-    - configMapRef:
-        name: configmap
+    - SecretRef:
+      name: pod-secret
