--- a/volumes/01-ebs-static.yaml
+++ b/volumes/01-ebs-static.yaml
@@ -24,3 +24,19 @@ spec:
   resources:
     requests:
       storage: 15Gi
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: nginx
+spec:
+  containers:
+  - name: nginx
+    image: nginx
+    volumeMounts:
+    - name: Persistent-storage
+      mountPath: /usr/share/nginx/html
+  volumes:
+  - name: Persistent-storage
+    persistentVolumeClaim:
+      claimName: ebs-static
