--- a/volumes/01-ebs-static.yaml
+++ b/volumes/01-ebs-static.yaml
@@ -34,9 +34,9 @@ spec:
   - name: nginx
     image: nginx
     volumeMounts:
-    - name: Persistent-storage
+    - name: persistent-storage
       mountPath: /usr/share/nginx/html
   volumes:
-  - name: Persistent-storage
+  - name: persistent-storage
     persistentVolumeClaim:
       claimName: ebs-static
