--- a/volumes/01-ebs-static.yaml
+++ b/volumes/01-ebs-static.yaml
@@ -30,6 +30,8 @@ kind: Pod
 metadata:
   name: nginx
 spec:
+  nodeSeletor:
+    topology.kubernetes.io/zone: us-east-1c
   containers:
   - name: nginx
     image: nginx
