--- a/volumes/01-ebs-static.yaml
+++ b/volumes/01-ebs-static.yaml
@@ -30,7 +30,7 @@ kind: Pod
 metadata:
   name: nginx
 spec:
-  nodeSeletor:
+  nodeSelector:
     topology.kubernetes.io/zone: us-east-1c
   containers:
   - name: nginx
