--- a/volumes/01-ebs-static.yaml
+++ b/volumes/01-ebs-static.yaml
@@ -29,6 +29,9 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: nginx
+  labels:
+    purpose: ebs-static-demo
+    project: roboshop
 spec:
   nodeSelector:
     topology.kubernetes.io/zone: us-east-1c
@@ -42,3 +45,20 @@ spec:
   - name: persistent-storage
     persistentVolumeClaim:
       claimName: ebs-static
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: ebs-static
+  labels:
+    purpose: ebs-static-demo
+    project: roboshop
+spec:
+  type: LoadBalancer
+  selector:
+    purpose: ebs-static-demo
+    project: roboshop
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
