--- a/volumes/04-efs-static.yaml
+++ b/volumes/04-efs-static.yaml
@@ -12,3 +12,15 @@ spec:
   csi:
     driver: ebs.csi.aws.com
     volumeHandle: fs-0dd7f10a842309701
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: efs-static
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: ""
+  resources:
+    requests:
+      storage: 5Gi
