--- a/volumes/04-efs-static.yaml
+++ b/volumes/04-efs-static.yaml
@@ -24,3 +24,38 @@ spec:
   resources:
     requests:
       storage: 5Gi
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: efs-static
+  labels:
+    purpose: efs-static-demo
+    project: roboshop
+spec:
+  containers:
+  - name: nginx
+    image: nginx
+    volumeMounts:
+    - name: persistent-storage
+      mountPath: /usr/share/nginx/html
+  volumes:
+  - name: persistent-storage
+    persistentVolumeClaim: efs-static
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: efs-static
+  labels:
+    purpose: efs-static-demo
+    project: roboshop
+spec:
+  LoadBalancer:
+  selector:
+    purpose: efs-static-demo
+    project: roboshop
+  ports:
+    - protocol: TCP
+      ports: 80
+      targetPort: 80
