--- a/volumes/04-efs-static.yaml
+++ b/volumes/04-efs-static.yaml
@@ -28,7 +28,7 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: efs-static
+  name: nginx
   labels:
     purpose: efs-static-demo
     project: roboshop
@@ -39,9 +39,10 @@ spec:
     volumeMounts:
     - name: persistent-storage
       mountPath: /usr/share/nginx/html
-    volumes:
-    - name: persistent-storage
-      persistentVolumeClaim: efs-static
+  volumes:
+  - name: persistent-storage
+    persistentVolumeClaim:
+      claimName: efs-static
 ---
 apiVersion: v1
 kind: Service
