--- a/16-deployment.yaml
+++ b/16-deployment.yaml
@@ -8,7 +8,7 @@ metadata:
     project: roboshop
     app: nginx
 spec:
-  replicas: 2
+  replicas: 3
     # these are the labels replicaset uses to create pod replicas, this should match pod labels
   selector:
     matchLabels:
@@ -26,3 +26,19 @@ spec:
       containers:
       - name: nginx
         image: nginx:latest # here u should change the version, so the pod in replicaset takes the version
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: Service-nginx
+  labels:
+    purpose: service-demo
+spec:
+  selector:
+    purpose: deployment-demo
+    project: roboshop
+    app: nginx
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: 80
