--- a/16-deployment.yaml
+++ b/16-deployment.yaml
@@ -30,7 +30,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: Service-nginx
+  name: service-nginx
   labels:
     purpose: service-demo
 spec:
