--- a/17-statefulset.yaml
+++ b/17-statefulset.yaml
@@ -32,10 +32,7 @@ spec:
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: sc-headless
-  labels:
-    purpose: statefulset
-    project: roboshop
+  name: nginx-statefulset
 spec:
   selector:
     matchLabels:
